istio-system/oauth2-proxy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oauth2-proxy
  labels:
    app: oauth2-proxy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: oauth2-proxy
  template:
    metadata:
      labels:
        app: oauth2-proxy
        sidecar.istio.io/inject: "true"
    spec:
      containers:
      - name: oauth2-proxy
        image: "quay.io/oauth2-proxy/oauth2-proxy:v7.2.0"
        imagePullPolicy: IfNotPresent
        args:
        - --http-address=0.0.0.0:4180
        - --metrics-address=0.0.0.0:44180
        - --config=/etc/oauth2_proxy/oauth2_proxy.cfg
        - --silence-ping-logging
        ports:
        - containerPort: 4180
          name: http
          protocol: TCP
        - containerPort: 44180
          protocol: TCP
          name: metrics
        livenessProbe:
          httpGet:
            path: /ping
            port: http
            scheme: HTTP
          initialDelaySeconds: 0
          timeoutSeconds: 1
        readinessProbe:
          httpGet:
            path: /ping
            port: http
            scheme: HTTP
          initialDelaySeconds: 0
          timeoutSeconds: 1
          successThreshold: 1
          periodSeconds: 10
        volumeMounts:
        - mountPath: /etc/oauth2_proxy
          name: configmain
      volumes:
      - configMap:
          defaultMode: 420
          name: oauth2-proxy
        name: configmain
