istio-system/oauth2-proxy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: oauth2-proxy
  labels:
    app: oauth2-proxy
spec:
  type: ClusterIP
  ports:
  - port: 4180
    targetPort: http
    protocol: TCP
    name: http
  - port: 44180
    protocol: TCP
    targetPort: metrics
    name: metrics
  selector:
    app: oauth2-proxy
