istio-system/oauth2-proxy/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: oauth2-proxy
spec:
  gateways:
  - addons-gateway
  hosts:
  - "grafana.istio-demo.timebertt.dev"
  - "kiali.istio-demo.timebertt.dev"
  - "prometheus.istio-demo.timebertt.dev"
  - "tracing.istio-demo.timebertt.dev"
  http:
  - route:
    - destination:
        host: oauth2-proxy
        port:
          number: 4180
    match:
    - uri:
        prefix: /oauth2/
